# AutomaticTesting

./: README.md  main.py  pyproject.toml  testing_codegen.py
AutomationTests/: helpers.py  pyproject.toml
AutomationTests/POM/: Rullete.py  baseClass.py
AutomationTests/automationtests/: test_bacura.py  test_contacts.py  test_one.py  test_rullete.py  test_two.py
AutomationTests/pageObjects/: BaseFunctions.py  ContactService.py  PlaceTheBet.py  TestBakara.py
AutomationTests/pageObjectsProject/: Contacts.py
AutomationTests/tests/: test_api.py  test_one.py  test_two.py
tests/: test_rullete.py
