[tool.poetry]
name = "automationtests"
version = "0.1.0"
description = ""
authors = ["jusivo <justinaa9455@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
playwright = "^1.48.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
